[package]
name = "review-web"
version = "0.18.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = { version = "6", features = ["chrono"] }
async-graphql-axum = "6"
async-trait = "0.1"
axum = { version = "0.6", features = ["headers", "macros"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
bincode = "1"
chrono = { version = ">=0.4.35", default_features = false, features = [
  "serde",
] }
data-encoding = "2"
futures = "0.3"
futures-util = "0.3"
http = "0.2"
ip2location = "0.5"
ipnet = { version = "2", features = ["serde"] }
jsonwebtoken = "9"
lazy_static = "1"
num-traits = "0.2"
oinq = { git = "https://github.com/petabi/oinq.git", tag = "0.9.1" }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls-native-roots",
] }
review-database = { git = "https://github.com/petabi/review-database.git", rev = "295f5b4" }
roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.2.1" }
rustls = "0.21"
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
vinum = { git = "https://github.com/vinesystems/vinum.git", tag = "1.0.3" }

[dev-dependencies]
config = { version = "0.13", features = ["toml"], default-features = false }
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "minireview"
